<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.miymayster.myvine.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/grono"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/app_slogan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/entrance_company_name">
        <TextView
            android:id="@+id/entrance_my_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="32sp"
            android:text="@string/my"
            android:textAllCaps="true"/>
        <TextView
            android:id="@+id/entrance_vine_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            android:text="@string/vine"
            android:textAllCaps="true"/>
    </LinearLayout>

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:gravity="center"
        android:layout_below="@id/entrance_company_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/care_and_history_of_your_grapes"/>

    <ImageView
        android:id="@+id/entrance_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_logo"
        android:layout_below="@id/app_slogan"
        android:layout_centerInParent="true"
        android:layout_marginBottom="32dp" />

    <LinearLayout
        android:id="@+id/entrance_alternative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/entrance_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp">
        <ImageView
            android:id="@+id/entrance_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@drawable/ic_google" />

        <ImageView
            android:id="@+id/entrance_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/entrance_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_twitter" />
    </LinearLayout>

    <TextView
        android:id="@+id/or_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="#fff"
        android:layout_below="@id/entrance_alternative"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/entry_email"
        android:layout_width="226dp"
        android:layout_height="40dp"
        android:layout_below="@id/or_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@color/editTextBackground"
        android:padding="4dp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email_address"/>
    <EditText
        android:id="@+id/entry_password"
        android:layout_width="226dp"
        android:layout_height="40dp"
        android:layout_below="@id/entry_email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@color/editTextBackground"
        android:padding="4dp"
        android:maxLines="1"
        android:inputType="textPassword"
        android:hint="@string/enter_password"/>
    <Button
        android:id="@+id/entry_button"
        android:layout_width="226dp"
        android:layout_height="48dp"
        android:layout_below="@id/entry_password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:textColor="#fff"
        android:background="@color/colorPrimary"
        android:text="@string/log_in"/>
    </LinearLayout>
</RelativeLayout>
